syntax = "proto3";

package visualisation;

option go_package = "generated/visualisationpb";

service VisualisationService {
  rpc GenerateChart (QueryResult) returns (SVGResponse);
}

message QueryResult {
  string sql_query = 1;
  repeated Row result = 2;
}

message Row {
  repeated string values = 1;
}

message SVGResponse {
  string svg = 1;
}
